# cuda4python

./: CMakeLists.txt  README.md
docs/: CODE_READING_GUIDE_CN.md  CUDA_TRITON_LINE_BY_LINE_CN.md
include/: kernels.h
python/: setup.py
python/mini_cuda_llm/: __init__.py  api.py  benchmark.py  benchmark_dl_ops.py  benchmark_triton.py  compare_cuda_triton.py  perf_pipeline.py  triton_intro.py  validate.py
python/mini_cuda_llm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
reports/latest/: dl_ops.csv  results.json  summary.md  vector_add.csv
scripts/: monitor_gpu.sh  run_perf_pipeline.sh
src/: dl_ops.cu  gemm.cu  main.cpp  vector_add.cu  vector_add_advanced.cu
